Replaced popover layout with card, adjusted colour

--- a/app/assets/stylesheets/_colours.scss
+++ b/app/assets/stylesheets/_colours.scss
@@ -8,6 +8,8 @@ $blue-border: #183660;
 $light-border: #cccccc;
 $dark-text: #262626;
 
+$primary-color: #026498;
+$primary-color-opposite: #FD9B67;
 $primary-background-color: #F5F5F5;
 $secondary-background-color: #237CBE;
 $primary-text-color: #444;
