--- a/app/assets/stylesheets/memberships.scss
+++ b/app/assets/stylesheets/memberships.scss
@@ -452,32 +452,37 @@
     }
   }
 
-  #member-review {
+  #member-preview {
     max-width: 100%;
     min-width: 500px;
+    font-size: 1em;
 
-    .popover-header {
-      margin: -9px 1px 0px -12px;
-      width: 105%;
-      background: $primary-color;
+    .card-title {
+      margin: -8px;
+      background: lighten($primary-color, 10%);
       color: #fff;
       margin-bottom: 0;
-      font-size: 0.9em;
+      font-size: 2em;
 
       #x-close {
-        background: $primary-color;
+        background: lighten($primary-color, 10%);
         color: #fff;
         border: 0;
-        font-size: 1.8em;
       }
     }
 
-    .popover-body {
+    .card-body {
       max-width: 100%;
       min-width: 500px;
       background: #fff;
-
+      margin: 0;
+      padding: 0;
       font-size: 1.5em;
+
+      .left-content {
+        max-width: 60%;
+      }
+
       p {
         font-size: 1em;
         margin: 0;
@@ -531,9 +536,12 @@
 
     .popover-footer {
       width: 100%;
-      float: left;
       background: #fff;
       padding: 0;
+
+      .popover-close {
+        background: lighten($primary-color, 10%);
+      }
     }
   }
 }
