--- a/app/views/memberships/_member_review_form.html.erb
+++ b/app/views/memberships/_member_review_form.html.erb
@@ -1,7 +1,7 @@
 <div class="card p-2" id="member-preview">
   <h4 class="card-title">
     <span class="d-flex flex-row-reverse">
-      <button type="button" class="popover-close" id="x-close" aria-hidden="true">×</button>
+      <button type="button" class="btn popover-close" id="x-close" aria-hidden="true">×</button>
     </span>
     <%= @event.code %>: <%= @person.name %>
   </h4>
