--- a/app/assets/stylesheets/_colours.scss
+++ b/app/assets/stylesheets/_colours.scss
@@ -9,7 +9,7 @@ $light-border: #cccccc;
 $dark-text: #262626;
 
 $primary-color: #026498;
-$primary-color-opposite: #FD9B67;
+$primary-color-opposite: darken(#FD9B67, 20%);
 $primary-background-color: #F5F5F5;
 $secondary-background-color: #237CBE;
 $primary-text-color: #444;
