* renamed popover from "review" to "preview" * user role-based membership preview popover * close popovers after navigation

--- a/app/views/memberships/_organizer_member_preview.html.erb
+++ b/app/views/memberships/_organizer_member_preview.html.erb
@@ -1,7 +1,7 @@
 <div class="card p-2" id="member-preview">
   <h4 class="card-title">
     <span class="d-flex flex-row-reverse">
-      <button type="button" class="btn popover-close" id="x-close" aria-hidden="true">×</button>
+      <button type="button" class="btn close-button" id="x-close" aria-hidden="true">×</button>
     </span>
     <%= @event.code %>: <%= @person.name %>
   </h4>
@@ -9,8 +9,12 @@
     <div class="p-2 flex-fill left-content">
       <p id="name"><%= @person.lastname %>, <%= @person.firstname %></p>
       <p id="affil"><%= @person.affiliation %></p>
-      <% if policy(@membership).use_email_addresses? || policy(@membership).show_email_address? %>
-      <p id="email"><%= mail_to @person.email %></p>
+      <% if policy(@membership).use_email_addresses? %>
+      <p id="email"><%= mail_to @person.email %>
+        <% unless @membership.share_email %>
+          (not shared)
+        <% end %>
+      </p>
       <% end %>
       <% unless @person.url.blank? %>
       <p id="url"><%= link_to @person.uri.truncate(60), @person.uri %></p>
@@ -20,6 +24,7 @@
       <p id="reviewed"><strong>Reviewed:</strong><%= reviewed(@membership).html_safe %></p>
     </div>
     <div class="p-2 flex-fill right-content">
+      <p id="role"><strong>Role:</strong><i><%= @membership.role %></p></i>
       <p id="attendance"><strong>Attendance:</strong><%= @membership.attendance %></p>
       <% unless @membership.replied_at.blank? %>
         <p id="rsvp-date"><strong>RSVP date:</strong><br><%= @membership.rsvp_date %></p>
@@ -43,9 +48,10 @@
     <%= link_to "Profile", event_membership_path(@event, @membership),
           class: "btn btn-secondary" %>
     <%= link_to "Edit", edit_event_membership_path(@event, @membership),
-          class: "btn btn-secondary" %>    </span>
-    <span class="right-buttons p-2 ml-auto">
-      <button type="button" class="btn btn-primary popover-close">Close</button>
+          class: "btn btn-secondary" %>
+    </span>
+    <span class="right-buttons p-2 ml-auto popover-close">
+      <button type="button" class="btn btn-primary close-button">Close</button>
     </span>
   </div>
 </div>
