--- a/app/assets/stylesheets/memberships.scss
+++ b/app/assets/stylesheets/memberships.scss
@@ -470,6 +470,7 @@
         font-size: 1.2em;
         margin-top: -8px;
         margin-bottom: -20px;
+        margin-right: -10px;
         padding-top: 0px;
         padding-bottom: 0px;
       }
@@ -485,6 +486,11 @@
 
       .left-content {
         max-width: 60%;
+        max-width: 400px;
+      }
+
+      .right-content {
+        max-width: 300px;
       }
 
       p {
@@ -510,11 +516,20 @@
         margin-top: 10px;
       }
 
+      #biography {
+        margin-top: 20px;
+      }
+
+      #research_areas {
+        margin-top: 20px;
+      }
+
       #billing {
         margin-top: 10px;
       }
 
-      #attendance {
+      #role {
+        padding-top: 35px;
       }
 
       #guests {
@@ -544,7 +559,15 @@
       padding: 0;
 
       .popover-close {
-        background: lighten($primary-color, 10%);
+        $new: lighten($primary-color, 10%);
+
+        .btn-primary {
+            @include button-variant($new, darken($new, 7.5%), darken($new, 10%), lighten($new,5%), lighten($new, 10%), darken($new,30%));
+        }
+
+        .btn-outline-primary {
+            @include button-outline-variant($new, #222222, lighten($new,5%), $new);
+        }
       }
     }
   }
