--- a/app/views/memberships/_organizer_member_preview.html.erb
+++ b/app/views/memberships/_organizer_member_preview.html.erb
@@ -9,19 +9,20 @@
     <div class="p-2 flex-fill left-content">
       <p id="name"><%= @person.lastname %>, <%= @person.firstname %></p>
       <p id="affil"><%= @person.affiliation %></p>
-      <% if policy(@membership).use_email_addresses? %>
-      <p id="email"><%= mail_to @person.email %>
+      <% if policy(@membership).show_email_address? %>
+        <p id="email"><%= mail_to @person.email %>
         <% unless @membership.share_email %>
           (not shared)
         <% end %>
-      </p>
+        </p>
       <% end %>
       <% unless @person.url.blank? %>
-      <p id="url"><%= link_to @person.uri.truncate(60), @person.uri %></p>
+        <p id="url"><%= link_to @person.uri.truncate(60), @person.uri %></p>
       <% end %>
-      <p id="address"><strong>Address:</strong><br><%= print_address(@person) %></p>
-      <p id="billing"><strong>Billing:</strong><%= @membership.billing %></p>
-      <p id="reviewed"><strong>Reviewed:</strong><%= reviewed(@membership).html_safe %></p>
+      <% address = print_address(@person) %>
+      <% unless address.blank? %>
+        <p id="address"><strong>Address:</strong><br> <%= address %></p>
+      <% end %>
     </div>
     <div class="p-2 flex-fill right-content">
       <p id="role"><strong>Role:</strong><i><%= @membership.role %></p></i>
@@ -31,12 +32,7 @@
       <% end %>
       <p id="arrival"><strong>Arrives:</strong><%= @membership.arrives %></p>
       <p id="departure"><strong>Departs:</strong><%= @membership.departs %></p>
-      <p id="guests"><strong>Guests:</strong><%= show_guests(@membership) %></p>
-      <% unless @membership.special_info.blank? %>
-        <p id="special-info">
-          <strong>Special info:</strong><%= simple_format(@membership.special_info) %>
-        </p>
-      <% end %>
+
       <p id="notes"><strong>Notes:</strong><%= member_notes(@membership) %></p>
     </div>
   </div>
