--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -234,7 +234,7 @@
       <%= link_to "Edit Membership", edit_event_membership_path(@event, @membership),
             class: 'btn btn-primary p-2' %> &nbsp; &nbsp;
     <% end %>
-    <% if policy(@membership).delete_membership? %>
+    <% if policy(@membership).destroy? %>
       <%= link_to 'Delete Membership', event_membership_path(@event, @membership),
             method: :delete, class: 'btn btn-danger p-2',
             data: { confirm: "Are you sure you want to remove #{@person.name} from #{@event.code}?" } %>
