--- a/app/views/memberships/invite.html.erb
+++ b/app/views/memberships/invite.html.erb
@@ -30,7 +30,7 @@
             <th class="select">Select</th>
             <th>#</th>
             <th>Name</th>
-            <% if show_invited_on?(members.first) %>
+            <% if show_invited_on?(status) %>
               <th>Invited On</th>
             <% else %>
               <th></th>
