* show membership preview for everyone * add phd year to preview (used for room selection by CMO) * skip confirmation notice in development mode * add person update time to preview (for admins) * admins AND super admins get staff  preview template * href link fix in membership tests

--- a/app/views/memberships/_membership_details_form.html.erb
+++ b/app/views/memberships/_membership_details_form.html.erb
@@ -2,7 +2,9 @@
   <div class="card" id="membership-details">
     <div class="card-title">
       <h3 id="membership">
-        <%= @event.code %> Membership Details
+        <%= @event.code %> Membership Details<br>
+        <small>Last updated by <%= @membership.updated_by %> at
+          <%= @membership.updated_at %></small>
       </h3>
     </div>
     <div class="card-body">
