--- a/app/views/memberships/_organizer_member_preview.html.erb
+++ b/app/views/memberships/_organizer_member_preview.html.erb
@@ -36,7 +36,8 @@
     <% unless @membership.replied_at.blank? %>
       RSVP date: <%= @membership.rsvp_date %><br>
     <% end %>
-    Last updated by: <%= @membership.updated_by %> on <%= @membership.last_updated %>
+      Person updated by <%= @membership.person.updated_by %> on <%= @membership.person.last_updated(@event) %><br>
+      Membership updated by <%= @membership.updated_by %> on <%= @membership.last_updated %>
   </div>
   <div class="popover-footer d-flex mb-1">
     <span class="left-buttons p-2 mr-auto">
