Restored visibility of schedule delete buttons

--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -32,6 +32,11 @@
     visibility: visible;
   }
 
+  .delete-item-buttons {
+    display: block;
+    visibility: visible;
+  }
+
   .card-schedule {
     padding-bottom: 0;
   }
