--- a/app/views/schedule/_schedule_index_items.html.erb
+++ b/app/views/schedule/_schedule_index_items.html.erb
@@ -9,7 +9,7 @@
       <% if policy(item).destroy? %>
       <td width="5">
         <div class="delete-item-buttons">
-        <%= link_to '<span class="glyphicon glyphicon-remove"></span>'.html_safe, event_schedule_path(@event, item), title: "Delete this item", method: :delete, data: { confirm: "Are you sure you want to delete \"#{item.name}\"?" } %>
+        <%= link_to '<i class="fa fa-times" aria-hidden="true"></i>'.html_safe, event_schedule_path(@event, item), title: "Delete this item", method: :delete, data: { confirm: "Are you sure you want to delete \"#{item.name}\"?" } %>
         </div>
       </td>
       <% end %>
