--- a/app/views/schedule/_schedule_index_items.html.erb
+++ b/app/views/schedule/_schedule_index_items.html.erb
@@ -6,6 +6,13 @@
         <%= schedule_link(item) %>
         <span class="location">(<%= item[:location] %>)</span>
       </td>
+      <% if policy(@schedule_policy).start_recording? %>
+      <td width="130">
+        <div class="recording-buttons no-print">
+          <%= start_or_stop_recording_button(item) %>
+        </div>
+      </td>
+      <% end %>
       <% if policy(item).destroy? %>
       <td width="5">
         <div class="delete-item-buttons">
