--- a/app/views/schedule/_form.html.erb
+++ b/app/views/schedule/_form.html.erb
@@ -2,6 +2,7 @@
 <div class="card" id="schedule-form-page">
 <%= form_for @schedule, url: {action: "#{@form_action}"}, :html => { :role => "form", :class => "form" } do |f| %>
 <%= f.hidden_field :event_id %>
+<%= f.hidden_field :id %>
 <%= time_limits(@schedule) %>
 <div class="card-title">
   <h4><%= f.object.new_record? ? '<i class="fa fa-calendar-plus-o" aria-hidden="true"></i> Add'.html_safe : '<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit'.html_safe %> Schedule Item</h4>
