--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -1,47 +1,45 @@
+<%#
+# Application Layout
+
+This view template is used as the layout
+for every page that Administrate generates.
+
+By default, it renders:
+- Navigation
+- Content for a search bar
+  (if provided by a `content_for` block in a nested page)
+- Flashes
+- Links to stylesheets and JavaScripts
+%>
+
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title><%= Rails.application.class.parent_name.titlecase %> DB: <%= content_for(:title).strip.chomp %></title>
-  <%= render "stylesheet" %><!-- administrate stylesheets -->
+  <meta name="ROBOTS" content="NOODP">
+  <meta name="viewport" content="initial-scale=1">
+  <title>
+    <%= content_for(:title) %> - <%= application_title %>
+  </title>
+  <%= render "stylesheet" %>
   <%= stylesheet_link_tag 'administrate', media: 'all' %>
-  <%= render 'layouts/favicon' %>
   <%= csrf_meta_tags %>
-
 </head>
 <body class="administrate">
-<div id="wrapper" class="fluid-container">
-  <div id="page-wrapper">
-    <div class="row">
-      <div class="col-lg-12">
-        <header>
-          <h1>Workshops Database Access</h1>
-          <p><%= link_to 'Return to Workshops', home_path, data: { turbolinks: false }, class: 'navigation__link' %></p>
-        </header>
-        <!-- Administrate body begin -->
-        <%= render "icons" %>
+  <header>
+    <h1>Workshops Database Access</h1>
+  </header>
 
-        <div class="app-container">
-          <%= render "navigation" -%>
+  <%= render "icons" %>
 
-          <main class="main-content" role="main">
-            <%= render "flashes" -%>
-            <%= yield %>
-          </main>
-        </div>
+  <div class="app-container">
+    <%= render "navigation" -%>
 
-        <%= render "javascript" %>
-        <!-- Administrate body end -->
-      </div>
-      <!-- /.col-lg-12 -->
-    </div>
-    <!-- /.row -->
+    <main class="main-content" role="main">
+      <%= render "flashes" -%>
+      <%= yield %>
+    </main>
   </div>
-  <!-- /#page-wrapper -->
-</div>
-<!-- /#wrapper -->
+  <%= render "javascript" %>
 </body>
 </html>
