--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -26,13 +26,10 @@
 
     img {
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 5px auto;
       vertical-align: middle;
-
       max-height: 40px;
       max-width: 40px;
-      margin: 5px;
       background-color: white;
       padding: 0;
     }
@@ -156,6 +153,7 @@ li.nav-second-level {
   color: white;
   padding: 10px;
   background-color: $primary-color;
+
   h3 {
     color: white;
   }
