--- a/app/assets/stylesheets/memberships.scss
+++ b/app/assets/stylesheets/memberships.scss
@@ -104,7 +104,7 @@
     .card {
       border: 1px solid $light-border;
       max-width: 550px;
-      margin: 0px 10px 10px 0px;
+      margin: 0 10px 10px 0;
     }
 
     .card-title {
@@ -238,7 +238,7 @@
   }
 
   #reply-by {
-    margin: 0px 10px 20px 0px;
+    margin: 0 10px 20px 0;
     padding: 0.5em;
     font-size: 1.2em;
     background-color: white;
@@ -407,6 +407,7 @@
 
   @media print {
     .no-print { display:none }
+
     a[href]::after {
       content: none !important;
     }
