--- a/app/assets/stylesheets/line-spinner.scss
+++ b/app/assets/stylesheets/line-spinner.scss
@@ -39,8 +39,10 @@
 }
 
 @-webkit-keyframes sk-stretchdelay {
-  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-  20% { -webkit-transform: scaleY(1.0) }
+  0%,
+  40%,
+  100% { -webkit-transform: scaleY(0.4); }
+  20% { -webkit-transform: scaleY(1.0); }
 }
 
 @keyframes sk-stretchdelay {
