--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -9,6 +9,7 @@
 
 .devise-errors {
   @extend .alert-danger;
+
   text-align: center;
   ul {
     text-align: left;
@@ -41,7 +42,7 @@
 }
 
 #ws-login-box {
-  box-shadow: 0px 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0px 29px 95px;
+  box-shadow: 0 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0 29px 95px;
   min-height: 420px;
 
   .pwchange-head {
