--- a/app/assets/stylesheets/invitations.scss
+++ b/app/assets/stylesheets/invitations.scss
@@ -14,7 +14,7 @@
     min-width: 350px;
     min-height: 390px;
     background-color: #fff;
-    box-shadow: 0px 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0px 29px 95px 0px rgba(0, 0, 0, 0.16);
+    box-shadow: 0 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0 29px 95px 0 rgba(0, 0, 0, 0.16);
     perspective: 800px;
     transition: all 0.5s ease-in-out;
 
