* Replaced =~ matching with .match? * Updated RsvpDeadline to accept event instead of start_date, accounts for TZ * Temporarily allow RSVPs until end of workshop (pandemic measure) * Skip Out of Office replies sent to mail lists * Skip webmaster=webmaster@ recipients sent to mail lists (Outlook bug) * Bugfix: default RSVP deadline on Tuesday before event

--- a/app/views/events/_event_edit_items.html.erb
+++ b/app/views/events/_event_edit_items.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <% if field_name =~ /max_|door/ %>
+  <% if field_name.match?(/max_|door/) %>
     <div class='col-md-2 form-group'>
   <% else %>
     <div class='col-md-12 form-group'>
@@ -11,7 +11,7 @@
     <%= form.label "#{field_name.titleize}" %>
     <% if %w(description press_release).include?(field_name) %>
       <%= form.text_area field_name, rows: 12, class: 'form-control' %>
-    <% elsif field_name =~ /max_|door/ %>
+    <% elsif field_name.match?(/max_|door/) %>
       <%= form.number_field field_name, class: 'form-control' %>
     <% else %>
       <%= form.text_field field_name, class: 'form-control' %>
