--- a/app/views/memberships/_member_index_items.html.erb
+++ b/app/views/memberships/_member_index_items.html.erb
@@ -2,7 +2,7 @@
 <% members.each do |member| %>
   <li id="member-<%= member.id %>" class="member-list-item <%= reply_due?(member) %>">
     <span class="member-name">
-    <% if member.role =~ /Organizer/ %>
+    <% if member.role.match?(/Organizer/) %>
       <strong><%= member_link(member) %></strong>
     <% elsif member.role == 'Observer' %>
       <span class="observer"><%= member_link(member) %></span>
