--- a/app/views/schedule/index.html.erb
+++ b/app/views/schedule/index.html.erb
@@ -15,7 +15,7 @@
       </div>
   <% else %>
     <% @event.days.each do |day| %>
-      <div class="row day-table<%= ' dont-print' if skip_day?(day) %>">
+      <div class="row day-table">
         <div class="col-lg-12">
           <div class="card card-default">
             <div class="card-title">
