--- a/app/views/bounce_mailer/non_member.text.erb
+++ b/app/views/bounce_mailer/non_member.text.erb
@@ -14,4 +14,4 @@ To: <%= @email_to %>
 Date: <%= @email_date %>
 Subject: <%= @email_subject %>
 
-(Message content removed to prevent spam via back-scatter)
+(Message content removed to prevent spam via back-scatter.)
