--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -68,3 +68,14 @@
     margin-top: 1.7em;
   }
 }
+
+table#events-list {
+  tr.cancelled {
+    td {
+      a:link { color: $cancelled-events-link-color; }
+      a:visited { color: $cancelled-events-link-color; }
+      a:active { color: $cancelled-events-link-color; }
+      a:hover { color: $primary-link-color; }
+    }
+  }
+}
