--- a/app/assets/stylesheets/line-spinner.scss
+++ b/app/assets/stylesheets/line-spinner.scss
@@ -24,7 +24,7 @@
 }
 
 .spinner .rect3 {
-  -webkit-animation-delay: -1.0s;
+  -webkit-animation-delay: -1s;
   animation-delay: -1.0s;
 }
 
@@ -49,7 +49,9 @@
   0%, 40%, 100% {
     transform: scaleY(0.4);
     -webkit-transform: scaleY(0.4);
-  }  20% {
+  }
+
+  20% {
     transform: scaleY(1.0);
     -webkit-transform: scaleY(1.0);
   }
