--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -80,7 +80,7 @@
       margin-bottom: 1.5em;
       padding: 0 1em;
     }
-    ul li {
+    li {
       font-size: 1.5em;
       line-spacing: 1.3em;
       margin: 0 1em;
@@ -118,11 +118,15 @@
       color: $secondary-text-color;
       max-width: 80%;
     }
+
     .mandatory:after {
-      content:"*";color:red;
+      content:"*";
+      color:red;
     }
+
     #may-return {
       @extend .text-center;
+
       margin-top: 1em;
       margin-bottom: 0;
     }
@@ -137,15 +141,13 @@
     }
 
     :-moz-placeholder { /* Firefox 18- */
-          font-size: 16px!important;
-    }
-    ::-moz-placeholder {  /* Firefox 19+ */
-          font-size: 16px!important;
+          font-size: 16px !important;
     }
 
     .date-titles {
       text-align: right;
       color: $secondary-text-color;
+
       h4 {
         font-size: 1.5em;
       }
@@ -153,22 +155,27 @@
 
     .date-selectors {
       overflow: none;
+
       label {
         font-size: 1.2em;
         text-decoration: underline;
       }
     }
+
     p {
       color: $secondary-text-color;
     }
+
     .checkbox {
       margin: 10px;
     }
+
     #accommodation_buttons {
       width: 100%;
       text-align: left;
       line-height: 1.5em;
       margin: -1em 0 0 1em;
+
       @media (min-width: 415px) {
         margin-left: 20%;
       }
@@ -185,15 +192,17 @@
         margin-top: 8px;
       }
 
-      .mandatory:before {
-        content:"*";color:red;
+      .mandatory::before {
+        content: "*";
+        color:red;
         font-size: 1.8em;
         float: right;
         margin-top: -10px;
         margin-right: -15px;
       }
-      .mandatory:after {
-        content:"";
+
+      .mandatory::after {
+        content: "";
       }
 
       .field_with_errors {
@@ -210,11 +219,13 @@
     #canadian-grants {
       h4 {
         color: $grey-heading;
+
         small {
           font-style: italic;
           color: lighten($grey-heading, 15);
         }
       }
+
       p {
         font-size: 1.2em;
         line-height: 1.5em;
@@ -224,6 +235,7 @@
 
     #privacy-notice {
       border: 1px solid lightgrey;
+
       p {
         padding: 1em;
       }
@@ -233,6 +245,7 @@
       label {
         color: $errors-text-color;
       }
+
       input,select {
         background-color: #e9d5d5;
       }
@@ -260,6 +273,7 @@
     padding: 1em;
     margin-top: 10px;
     color: $grey-heading;
+
     a:link {
       text-decoration: underline;
     }
@@ -285,6 +299,7 @@
     @media (min-width: 768px) {
       text-align: right;
     }
+
     padding: 0.4em;
   }
 
@@ -316,7 +331,7 @@
       .btn {
         float: none;
         margin-bottom: 1em;
-        }
+      }
     }
   }
 }
